# ZeroLagSpeech

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json
apps/api/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/database/: __init__.py  (+3 more)
apps/api/migrations/: README  env.py
apps/api/tests/: test_database.py  test_health.py
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json
apps/desktop/public/: pcm-worklet.js
apps/desktop/src/: App.tsx  sidecar.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/binaries/: zerolag-sidecar-x86_64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/sidecar/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements-dev.txt
apps/sidecar/scripts/: smoke_test.py
apps/sidecar/src/: cerebras.js  db.js  server.js
apps/sidecar/src/stt/: deepgram.js  elevenlabs.js
apps/sidecar/src/zerolag_sidecar/: __init__.py  __main__.py  app.py  config.py  schemas.py  security.py  session.py
apps/sidecar/tests/: test_config.py  test_health.py  test_websocket.py
apps/web/: eslint.config.mjs  package.json
docker/: api.Dockerfile  web.Dockerfile
docs/: desktop-runtime.md  sidecar-protocol.md
scripts/: build-sidecar.mjs  setup-sidecar.mjs
(+19 files in other folders)
