[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "zerolag-sidecar"
version = "0.1.0"
description = "Local provider sidecar for ZeroLag Desktop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.10,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
zerolag-sidecar = "zerolag_sidecar.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zerolag_sidecar"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
