[package]
name = "zerolag-desktop"
version = "0.1.0"
description = "Local-first real-time voice intelligence"
authors = ["ZeroLag contributors"]
edition = "2021"

[lib]
name = "zerolag_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
